2023-05-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-melpa-links): New function.

	* eev-elinks.el (ee-find-epackage-links0): use `find-melpa-links'.

2023-04-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (code-etv2, find-code-etv2, ee-code-etv2): new
	functions.

	* eev-videolinks.el (ee-1stclassvideos-pagestem): new function.

2023-04-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-find-eww-preprocess-url): new function.
	(find-eww): use `ee-find-eww-preprocess-url'.

2023-02-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tla.el (ee-code-tla): small changes.

2023-01-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-emajormode-links): fixed a bug.

	* eev-kla.el (ee-kl-sexp-kla0, eekla0): new functions.

	* eev-tlinks.el (find-emacsclient-links): new function.

2023-01-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el: changed angg.twu.net to anggtwu.net.

	* eev-blinks.el: changed angg.twu.net to anggtwu.net.

	* eev-elinks.el: changed angg.twu.net to anggtwu.net.

	* eev-hlinks.el: changed angg.twu.net to anggtwu.net.

	* eev-plinks.el: changed angg.twu.net to anggtwu.net.

	* eev-tlinks.el: changed angg.twu.net to anggtwu.net.

	* eev-testblocks.el (ee-insert-test-raku-mode): also use
	eepitch-shell.

2023-01-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (ee-find-epackage-links0): use `find-epackages'.

2023-01-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (eepitch-raku): new function.

	* eev-testblocks.el (ee-insert-test-raku-mode): new function.

2023-01-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-try-sly-links): rewrote several parts.

2023-01-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-symbol<): new function.
	(ee-sort-symbols): new function.

2023-01-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-efunctiondescr-re): recognize built-in
	functions.